@@ -7,6 +7,7 @@ polyphone (1.9) unstable; urgency=low
   * (improvement) glow effect when the virtual keyboard is focused with ctrl+K
   * (improvement) EQ values automatically stored and loaded on startup
   * (improvement) highlight a modulator corresponding to a cell and vice versa
+  * (improvement) the current mouse position is displayed in the sample graph
   * (fix) crash with a drag & drop in the tree
   * (fix) release bug when using loop + end mode
   * (fix) the progress bar sometimes remains when loading a small soundfont
